--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "polars_test_package"
+name = "polarstestpackage"
 version = "0.1.0"
 edition = "2021"
 
@@ -31,3 +31,4 @@ uuid = { version = "1.3.1", features = ["serde", "v4"] }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 dotenv = "0.15.0"
+zip = "2.1.3"
