--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,5 @@ serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 dotenv = "0.15.0"
 zip = "2.1.3"
+polars = "0.40.0"
+plotters = "0.3.6"
